--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    continue-on-error: true
+    # continue-on-error: true
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
