--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,27 @@
 name:  build website # ThankYou @tomkralidis!
-on: push
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     # continue-on-error: true
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+      pages: 'write'
+      actions: 'write'
+      checks: 'write'
+      deployments: 'write'
+
     steps:
       - name: checkout repo
         uses: actions/checkout@v4
@@ -26,27 +43,40 @@ jobs:
         with:
           ref: gh-pages        
 
-      - name: update gh-pages branch and publish
-        run: |
-          git config --global user.email "doublebyte@hushmail.com"
-          git config --global user.name "doublebyte1"
-          rm -rf assets css js index.html
-          mv -f /tmp/dist/* .
-          git add .
-          git commit -a -m "update website"
-          git push
-
-  # Deployment job
-  deploy:
-    needs: build
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # Upload build directory content
+          path: 'dist/'
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v1
+        env:  
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  #     - name: update gh-pages branch and publish
+  #       run: |
+  #         git config --global user.email "doublebyte@hushmail.com"
+  #         git config --global user.name "doublebyte1"
+  #         rm -rf assets css js index.html
+  #         mv -f /tmp/dist/* .
+  #         git add .
+  #         git commit -a -m "update website"
+  #         git push
+
+  # # Deployment job
+  # deploy:
+  #   needs: build
+  #   permissions:
+  #     pages: write      # to deploy to Pages
+  #     id-token: write   # to verify the deployment originates from an appropriate source
+  #   environment:
+  #     name: github-pages
+  #     url: ${{ steps.deployment.outputs.page_url }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Deploy to GitHub Pages
+  #       id: deployment
+  #       uses: actions/deploy-pages@v4
