--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,12 +36,11 @@ jobs:
       - name: build website
         run: |
           npm run build
-          mv dist/ /tmp
  
-      - name: checkout gh-pages branch
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages        
+      # - name: checkout gh-pages branch
+      #   uses: actions/checkout@v4
+      #   with:
+      #     ref: gh-pages        
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
