- updated metadata on package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "title": "Agency",
-    "name": "startbootstrap-agency",
+    "title": "OGC API - Features micro website",
+    "name": "ogc-features-website",
     "version": "7.0.5",
     "scripts": {
         "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets && cp CNAME dist/",
@@ -14,26 +14,25 @@
     },
     "description": "Agency is a one page HTML theme for Bootstrap.",
     "keywords": [
-        "css",
-        "sass",
-        "html",
-        "responsive",
-        "theme",
-        "template"
+        "ogc",
+        "features",
+        "vector",
+        "standards",
+        "OpenAPI",
+        "developer"
     ],
-    "homepage": "https://startbootstrap.com/theme/agency",
+    "homepage": "https://features.developer.ogc.org/",
     "bugs": {
-        "url": "https://github.com/StartBootstrap/startbootstrap-agency/issues",
-        "email": "feedback@startbootstrap.com"
+        "url": "https://github.com/opengeospatial/ogc-features-website/issues/",
+        "email": "devrel@ogc.org"
     },
-    "license": "MIT",
-    "author": "Start Bootstrap",
+    "author": "Joana Simoes",
     "contributors": [
-        "David Miller (https://davidmiller.io/)"
+        "doublebyte1 (https://github.com/doublebyte1/)"
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/StartBootstrap/startbootstrap-agency.git"
+        "url": "https://github.com/opengeospatial/ogc-features-website.git"
     },
     "dependencies": {
         "bootstrap": "5.0.2"
