--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "start": "npm run build && node scripts/start.js",
         "start:debug": "npm run build && node scripts/start-debug.js"
     },
-    "description": "Agency is a one page HTML theme for Bootstrap.",
+    "description": "Source code for the OGC API - Features micro website.",
     "keywords": [
         "ogc",
         "features",
